--- a/app/src/pages/about/about.scss
+++ b/app/src/pages/about/about.scss
@@ -6,6 +6,9 @@ section.about {
     padding: 0 2em;
     display: flex;
     flex-direction: column;
+    @media screen and (max-width: $mobile-width){
+      padding: 0;
+    }
   }
 }
 
