--- a/app/src/pages/history/history.scss
+++ b/app/src/pages/history/history.scss
@@ -1,6 +1,10 @@
 @import "../../style";
 
-#skill {
-  background-color: lightgray;
+#history {
+  margin: auto;
+  max-width: 1200px;
+}
+#history-wr {
+  background-color: white;
   padding-bottom: 3em;
 }
