--- a/app/src/pages/skill/skill.scss
+++ b/app/src/pages/skill/skill.scss
@@ -1,6 +1,11 @@
 @import "../../style";
 
 #skill {
+  margin: auto;
+  max-width: 1200px;
+}
+#skill-wr {
   background-color: lightgray;
   padding-bottom: 3em;
 }
+
