--- a/app/src/components/imgBlock.scss
+++ b/app/src/components/imgBlock.scss
@@ -2,8 +2,8 @@
 .img-block {
   background-color: #0A0101;
   color: white;
-  width: 200px;
-  margin: 1em 1em 1em 0;
+  width: 180px;
+  margin: 0.5em;
   @media screen and (max-width: $mobile-width){
     width: 100%;
   }
@@ -22,11 +22,12 @@
     font-size: 1.5em;
   }
   img {
+    object-fit: contain;
     position: absolute;
     right: 0;
     bottom: 0;
     width: 40%;
-
+    max-height: 100px;
     &.freedom {
       transform: scaleX(-1);
     }
