--- a/app/src/components/skillState.scss
+++ b/app/src/components/skillState.scss
@@ -9,7 +9,7 @@
   transition: 0.5s;
   transition-delay: 0.5s;
   @media screen and (max-width: $mobile-width) {
-	padding: 2em 0;
+	padding: 0.5em;
 	width: 100%;
   }
 
