--- a/app/src/pages/home/home.scss
+++ b/app/src/pages/home/home.scss
@@ -14,15 +14,15 @@
 	font-size: 6em;
   }
 
-  & > :nth-child(1) {
-	letter-spacing: 0.38em;
+  & div:nth-child(1) {
+	letter-spacing: 0.36em;
   }
 
-  & > :nth-child(2) {
-	letter-spacing: 0.25em;
+  & div:nth-child(2) {
+	letter-spacing: 0.24em;
   }
 
-  & > :nth-child(3) {
+  & div:nth-child(3) {
 	letter-spacing: 0.14em;
   }
 }
